Updated plone.recipe.plone to 3.1.5.1. Pinned all dependencies in buildout.cfg.
svn path=/feedfeeder/trunk/; revision=72994

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -21,7 +21,22 @@ develop = .
 versions = versions
 
 [versions]
-plone.recipe.plone = 3.1.4
+# Pinned versions with this command line:
+# bin/buildout -Novvvvv |sed -ne 's/^Picked: //p' | sort | uniq
+# except that it print 'feedparser' and it must be 'FeedParser'
+collective.recipe.z2testrunner = 0.3
+elementtree = 1.2.7-20070827-preview
+FeedParser = 4.1
+plone.recipe.distros = 1.3
+plone.recipe.plone = 3.1.5.1
+plone.recipe.zope2install = 2.3
+plone.recipe.zope2instance = 2.5
+python-openid = 2.2.1
+setuptools = 0.6c9
+zc.buildout = 1.1.1
+zc.recipe.egg = 1.1.0
+zope.interface = 3.4.1
+zope.testing = 3.7.0
 
 [plone]
 recipe = plone.recipe.plone
