Use plone.reload in buildout.cfg
svn path=/feedfeeder/trunk/; revision=85854

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -15,6 +15,7 @@ eggs =
     PILwoTK
     elementtree
     Products.feedfeeder
+    plone.reload
 
 # Products.feedfeeder is developed in the current directory:
 develop = .
@@ -64,6 +65,7 @@ eggs =
 # If you want to register ZCML slugs for any packages, list them here.
 # e.g. zcml = my.package my.other.package
 zcml =
+    plone.reload
 
 products =
     ${plone:products}
