--- a/buildout.cfg
+++ b/buildout.cfg
@@ -23,12 +23,15 @@ develop = .
 versions = versions
 
 [versions]
+# No Zope 2.12 egg please:
+plone.reload = 0.11
 # Pinned versions with this command line:
 # bin/buildout -Novvvvv |sed -ne 's/^Picked: //p' | sort | uniq
-# except that it print 'feedparser' and it must be 'FeedParser'
+# except that it prints 'feedparser' and it must be 'FeedParser'
 collective.recipe.z2testrunner = 0.3
 elementtree = 1.2.7-20070827-preview
 FeedParser = 4.1
+PILwoTK = 1.1.6.4
 plone.recipe.distros = 1.3
 plone.recipe.plone = 3.1.7
 plone.recipe.zope2install = 2.6
