Pinned BeautifulSoup in the buildout. Thanks, Luciano!
svn path=/feedfeeder/trunk/; revision=101416

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -28,6 +28,7 @@ plone.reload = 0.11
 # Pinned versions with this command line:
 # bin/buildout -Novvvvv |sed -ne 's/^Picked: //p' | sort | uniq
 # except that it prints 'feedparser' and it must be 'FeedParser'
+BeautifulSoup = 3.1.0.1
 collective.recipe.z2testrunner = 0.3
 elementtree = 1.2.7-20070827-preview
 FeedParser = 4.1
