--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,26 +1,19 @@
 [buildout]
-parts =
-    plone
-    zope2
-    instance
+extends =
+    http://svn.plone.org/svn/collective/buildout/plonetest/plone3.3.x.cfg
+
+parts +=
     test
 
-find-links =
-    http://dist.plone.org
-    http://download.zope.org/ppix/
-    http://download.zope.org/distribution/
-    http://effbot.org/downloads
-
-eggs =
-    PILwoTK
-    elementtree
+[instance]
+eggs +=
+    Products.feedfeeder
+#    PILwoTK
+    plone.reload
+zcml =
     Products.feedfeeder
     plone.reload
 
-# Products.feedfeeder is developed in the current directory:
-develop = .
-
-versions = versions
 
 [versions]
 # No Zope 2.12 egg please:
@@ -29,50 +22,10 @@ plone.reload = 0.11
 # bin/buildout -Novvvvv |sed -ne 's/^Picked: //p' | sort | uniq
 # except that it prints 'feedparser' and it must be 'FeedParser'
 BeautifulSoup = 3.1.0.1
-collective.recipe.z2testrunner = 0.3
-elementtree = 1.2.7-20070827-preview
 FeedParser = 4.1
 PILwoTK = 1.1.6.4
-plone.recipe.distros = 1.3
-plone.recipe.plone = 3.1.7
-plone.recipe.zope2install = 2.6
-plone.recipe.zope2instance = 2.8
-python-openid = 2.2.1
-setuptools = 0.6c9
-zc.buildout = 1.1.1
-zc.recipe.egg = 1.1.0
-zope.interface = 3.5.0
-zope.testing = 3.7.1
+collective.recipe.z2testrunner = 0.3.1
 
-[plone]
-recipe = plone.recipe.plone
-
-[zope2]
-recipe = plone.recipe.zope2install
-url = ${plone:zope2-url}
-
-[instance]
-recipe = plone.recipe.zope2instance
-zope2-location = ${zope2:location}
-user = admin:admin
-http-address = 8080
-debug-mode = on
-verbose-security = on
-
-# If you want Zope to know about any additional eggs, list them here.
-# This should include any development eggs you listed in develop-eggs above,
-# e.g. eggs = ${buildout:eggs} ${plone:eggs} my.package
-eggs =
-    ${buildout:eggs}
-    ${plone:eggs}
-
-# If you want to register ZCML slugs for any packages, list them here.
-# e.g. zcml = my.package my.other.package
-zcml =
-    plone.reload
-
-products =
-    ${plone:products}
 
 [test]
 recipe = collective.recipe.z2testrunner
