--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,9 +1,8 @@
 [buildout]
 extends =
     http://svn.plone.org/svn/collective/buildout/plonetest/plone-3.3.x.cfg
+package-name = Products.feedfeeder
 
-parts +=
-    test
 
 [instance]
 eggs +=
@@ -16,19 +15,8 @@ zcml =
 
 
 [versions]
-# No Zope 2.12 egg please:
+# Avoid getting a Zope 2.12 egg when on Plone 3 please:
 plone.reload = 0.11
-# Pinned versions with this command line:
-# bin/buildout -Novvvvv |sed -ne 's/^Picked: //p' | sort | uniq
-# except that it prints 'feedparser' and it must be 'FeedParser'
 BeautifulSoup = 3.1.0.1
 FeedParser = 4.1
 PILwoTK = 1.1.6.4
-collective.recipe.z2testrunner = 0.3.1
-
-
-[test]
-recipe = collective.recipe.z2testrunner
-zope2part = instance
-packages =
-    Products.feedfeeder
