--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,6 +1,6 @@
 [buildout]
+extends = http://dist.plone.org/release/3.3.5/versions.cfg
 parts =
-    plone
     zope2
     instance
     test
@@ -14,7 +14,8 @@ find-links =
 eggs =
     PILwoTK
     elementtree
-    Products.feedfeeder
+    Products.feedfeeder [tests]
+    z3c.form<2.3dev
     plone.reload
 
 # Products.feedfeeder is developed in the current directory:
@@ -22,30 +23,13 @@ develop = .
 
 versions = versions
 
-[versions]
-# Pinned versions with this command line:
-# bin/buildout -Novvvvv |sed -ne 's/^Picked: //p' | sort | uniq
-# except that it print 'feedparser' and it must be 'FeedParser'
-collective.recipe.z2testrunner = 0.3
-elementtree = 1.2.7-20070827-preview
-FeedParser = 4.1
-plone.recipe.distros = 1.3
-plone.recipe.plone = 3.1.7
-plone.recipe.zope2install = 2.6
-plone.recipe.zope2instance = 2.8
-python-openid = 2.2.1
-setuptools = 0.6c9
-zc.buildout = 1.1.1
-zc.recipe.egg = 1.1.0
-zope.interface = 3.5.0
-zope.testing = 3.7.1
-
-[plone]
-recipe = plone.recipe.plone
-
 [zope2]
 recipe = plone.recipe.zope2install
-url = ${plone:zope2-url}
+url = ${versions:zope2-url}
+skip-fake-eggs =
+    zope.schema
+    zope.i18n
+    zope.testing
 
 [instance]
 recipe = plone.recipe.zope2instance
@@ -60,15 +44,11 @@ verbose-security = on
 # e.g. eggs = ${buildout:eggs} ${plone:eggs} my.package
 eggs =
     ${buildout:eggs}
-    ${plone:eggs}
 
 # If you want to register ZCML slugs for any packages, list them here.
 # e.g. zcml = my.package my.other.package
 zcml =
     plone.reload
-
-products =
-    ${plone:products}
 
 [test]
 recipe = collective.recipe.z2testrunner
