Cleanup the test buildout.
We keep using feedparser 4.1 in the tests.  Plone pins this to 5.0.1,
but that gives errors during testing.  We should fix those, but it
seems everything works fine in a real website, also in Plone 4.3.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -7,17 +7,9 @@ package-name = Products.feedfeeder
 [instance]
 eggs +=
     Products.feedfeeder
-#    PILwoTK
-    plone.reload
-zcml =
-    Products.feedfeeder
-    plone.reload
 
 
 [versions]
-# Avoid getting a Zope 2.12 egg when on Plone 3 please:
-plone.reload = 0.11
-BeautifulSoup = 3.2.0
+BeautifulSoup = 3.2.1
 FeedParser = 4.1
-PILwoTK = 1.1.6.4
-zc.recipe.testrunner = 1.2.1
+feedparser = 4.1
