Add travis support.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,15 +1,16 @@
+# Note: you need to create two directories manually:
+# mkdir -p buildout-cache/eggs
+# mkdir -p buildout-cache/downloads
 [buildout]
 extends =
     https://raw.github.com/collective/buildout.plonetest/master/test-4.x.cfg
 package-name = Products.feedfeeder
 
 
-[instance]
-eggs +=
-    Products.feedfeeder
-
-
 [versions]
 BeautifulSoup = 3.2.1
+# We keep using feedparser 4.1 in the tests.  Plone pins this to 5.0.1,
+# but that gives errors during testing.  We should fix those, but it
+# seems everything works fine in a real website, also in Plone 4.3.
 FeedParser = 4.1
 feedparser = 4.1
