--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,10 @@ language: python
 python:
   - "2.7"
 notifications:
+  email:
+    recipients:
+    - maurits@vanrees.org
+    on_success: change
   irc:
     channels: "irc.freenode.org#vanrees"
     on_success: change
