--- a/buildout.cfg
+++ b/buildout.cfg
@@ -12,5 +12,5 @@ BeautifulSoup = 3.2.1
 # We keep using feedparser 4.1 in the tests.  Plone pins this to 5.0.1,
 # but that gives errors during testing.  We should fix those, but it
 # seems everything works fine in a real website, also in Plone 4.3.
-FeedParser = 4.1
+#FeedParser = 4.1
 feedparser = 4.1
