--- a/travis.cfg
+++ b/travis.cfg
@@ -1,7 +1,5 @@
 [buildout]
 extends =
-    buildout.cfg
     https://raw.github.com/collective/buildout.plonetest/master/travis-4.x.cfg
-# Yes, this is needed here, too:
+    versions.cfg
 package-name = Products.feedfeeder
-#package-extras = [test]
