--- a/buildout.cfg
+++ b/buildout.cfg
@@ -2,6 +2,7 @@
 # mkdir -p buildout-cache/eggs
 # mkdir -p buildout-cache/downloads
 [buildout]
+extensions = buildout-versions
 extends =
     https://raw.github.com/collective/buildout.plonetest/master/test-4.x.cfg
     versions.cfg
