--- a/versions.cfg
+++ b/versions.cfg
@@ -1,5 +1,6 @@
 [versions]
-BeautifulSoup = 3.2.1
+beautifulsoup4 = 4.3.2
+buildout-versions = 1.7
 # We keep using feedparser 4.1 in the tests.  Plone pins this to 5.0.1,
 # but that gives errors during testing.  We should fix those, but it
 # seems everything works fine in a real website, also in Plone 4.3.
