--- a/buildout.cfg
+++ b/buildout.cfg
@@ -7,3 +7,4 @@ extends =
     https://raw.github.com/collective/buildout.plonetest/master/test-4.x.cfg
     versions.cfg
 package-name = Products.feedfeeder
+test-eggs = Products.feedfeeder[test]
