--- a/travis.cfg
+++ b/travis.cfg
@@ -3,3 +3,4 @@ extends =
     https://raw.github.com/collective/buildout.plonetest/master/travis-4.x.cfg
     versions.cfg
 package-name = Products.feedfeeder
+test-eggs = Products.feedfeeder[test]
